// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test for atom - Badge render Badge with className 1`] = `
<div>
  <span
    class="testingClassName css-1i1ahpj"
    data-testid="Badge/testId"
  >
    <span />
  </span>
</div>
`;

exports[`test for atom - Badge render Badge with value 1`] = `
<div>
  <span
    class="css-1i1ahpj"
    data-testid="Badge/testId"
  >
    <span>
      this is a super weird test
    </span>
  </span>
</div>
`;

exports[`test for atom - Badge render Badge without props must be same 1`] = `
<div>
  <span
    class="css-1i1ahpj"
    data-testid="Badge/testId"
  >
    <span />
  </span>
</div>
`;
